# DLA-Convert

./: .gitignore  CMakeLists.txt  README.md
dla_converter/: CMakeLists.txt
dla_converter/include/: dla.hpp  trt.hpp  utils.hpp
dla_converter/src/: dla.cpp  to_dla_fp16.cpp  to_dla_int8.cpp  trt.cpp  utils.cpp
tests/data/: test.calib
